# to_do_api

./: .gitignore  README.md  go.mod  go.sum  main.go  pyproject.toml  to_do_list.go  todo.db
architecture/: backend_api.md
src/: main.py
src/test/: httpx01.py  test.rs  test_fastapi01.py  test_httpx01.py  test_qrcode.py
