[tool.poetry]
name = "to-do-api"
version = "0.1.0"
description = "Using FastAPI to make a to_do_api"
authors = ["hong <j50508@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "to_do_api"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
httpx = "^0.24.1"
flask = "^2.3.2"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
